--- a/front/src/main/webapp/index.html
+++ b/front/src/main/webapp/index.html
@@ -25,9 +25,9 @@
         <ul class="nav-listing">
           <li class="selected"><a href="index.html"><span class="icon"></span><span class="tag">Dashboard de inicio</span></a></li>
           <li><a href="news.html"><span class="icon"></span><span class="tag">Actualidad de la industria</span></a></li>
-          <li><a href="#"><span class="icon"></span><span class="tag">Perfil</span></a></li>
-          <li><a href="#"><span class="icon"></span><span class="tag">Alertas y notifiaciones</span></a></li>
-          <li><a href="#"><span class="icon"></span><span class="tag">Inteligencia comercial</span></a></li>
+          <li><a href="question.html"><span class="icon"></span><span class="tag">Perfil</span></a></li>
+          <li><a href="alerts.html"><span class="icon"></span><span class="tag">Alertas y notifiaciones</span></a></li>
+          <li><a href="ic.html"><span class="icon"></span><span class="tag">Inteligencia comercial</span></a></li>
           <li><a href="#"><span class="icon"></span><span class="tag">Inteligencia social</span></a></li>
         </ul>
       </nav>
@@ -79,28 +79,58 @@
               <ul>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/1.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Competencia desleal genera pérdidas de 60% a industria textil</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/4.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>terra.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eluniversal.com.mx</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
                 </li>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/4.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/5.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Universidades, respuesta a necesidades regionales</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>terra.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eluniversal.com.mx</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
                 </li>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Tepeji del Río, potencia textilera</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Tepeji del Río, potencia textilera</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eluniversal.com.mx</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+              </ul>
+              <footer class="action"><a href="actualidad.html" class="link">Ver más<i class="fa fa-arrow-right"></i></a></footer>
+            </div>
+            <div class="widget widget-news">
+              <h2><br></h2>
+              <ul>
                 <li class="element">
                   <div class="content cf">
                     <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
@@ -120,7 +150,31 @@
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/3.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Repartirá Concurso Artesanal Textil 215 mil pesos en premios</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>terra.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/1.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Competencia desleal genera pérdidas de 60% a industria textil</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>terra.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
@@ -138,30 +192,6 @@
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/4.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/5.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Universidades, respuesta a necesidades regionales</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
                       <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
@@ -169,54 +199,12 @@
                 </li>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Tepeji del Río, potencia textilera</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/4.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-              </ul>
-              <footer class="action"><a href="actualidad.html" class="link">Ver más<i class="fa fa-arrow-right"></i></a></footer>
-            </div>
-            <div class="widget widget-news">
-              <h2><br></h2>
-              <ul>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/5.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Universidades, respuesta a necesidades regionales</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/3.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Repartirá Concurso Artesanal Textil 215 mil pesos en premios</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/3.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Repartirá Concurso Artesanal Textil 215 mil pesos en premios</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>terra.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
@@ -228,7 +216,19 @@
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>terra.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/6.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Inversión se concentra en Pachuca, Zempoala y Tula</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
