--- a/front/src/main/webapp/actualidad-tweets.html
+++ b/front/src/main/webapp/actualidad-tweets.html
@@ -35,7 +35,7 @@
         </ul>
       </nav>
       <section class="main-container">
-        <div class="main-container-overlay"></div>
+        <div class="main-container-overlay js-main-container-overlay"></div>
         <div class="panel-title">
           <div class="container">
             <h1>Actualidad en la industria</h1>
@@ -93,79 +93,19 @@
             <ul>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/2.jpg"/></a></div>
-                  <div class="content">
-                    <p>#Noticias. Avanza Centro de Innovación Textil de  corte nacional http://bit.ly/1pWmKLy</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eluniversal</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/2.jpg"/></a></div>
-                  <div class="content">
-                    <p>#Noticias. Avanza Centro de Innovación Textil de  corte nacional http://bit.ly/1pWmKLy</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/5.jpg"/></a></div>
-                  <div class="content">
-                    <p>Universidades, respuesta a necesidades regionales</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/1.jpg"/></a></div>
-                  <div class="content">
-                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/3.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/3.jpg"/></a></div>
                   <div class="content">
                     <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
                   </div>
                 </header>
                 <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eleconomista</span></a></div>
                   <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
               </li>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/3.jpg"/></a></div>
-                  <div class="content">
-                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/4.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/4.jpg"/></a></div>
                   <div class="content">
                     <p>Gigantes occidentales del textil apoyan acuerdos para seguridad del trabajo en Bangladesh http://mile.io/11DmJpR</p>
                   </div>
@@ -177,31 +117,19 @@
               </li>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/3.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
                   <div class="content">
-                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
+                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
                   </div>
                 </header>
                 <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
                   <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
               </li>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/4.jpg"/></a></div>
-                  <div class="content">
-                    <p>Gigantes occidentales del textil apoyan acuerdos para seguridad del trabajo en Bangladesh http://mile.io/11DmJpR</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/1.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
                   <div class="content">
                     <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
                   </div>
@@ -213,9 +141,57 @@
               </li>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/5.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/3.jpg"/></a></div>
+                  <div class="content">
+                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
+                  </div>
+                </header>
+                <footer class="cf">
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
+                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                </footer>
+              </li>
+              <li class="element tweet">
+                <header class="cf">
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/3.jpg"/></a></div>
+                  <div class="content">
+                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
+                  </div>
+                </header>
+                <footer class="cf">
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
+                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                </footer>
+              </li>
+              <li class="element tweet">
+                <header class="cf">
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/4.jpg"/></a></div>
+                  <div class="content">
+                    <p>Gigantes occidentales del textil apoyan acuerdos para seguridad del trabajo en Bangladesh http://mile.io/11DmJpR</p>
+                  </div>
+                </header>
+                <footer class="cf">
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
+                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                </footer>
+              </li>
+              <li class="element tweet">
+                <header class="cf">
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/5.jpg"/></a></div>
                   <div class="content">
                     <p>Universidades, respuesta a necesidades regionales</p>
+                  </div>
+                </header>
+                <footer class="cf">
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eluniversal</span></a></div>
+                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                </footer>
+              </li>
+              <li class="element tweet">
+                <header class="cf">
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/3.jpg"/></a></div>
+                  <div class="content">
+                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
                   </div>
                 </header>
                 <footer class="cf">
@@ -225,13 +201,37 @@
               </li>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="view-new.html"><img src="img/twitter-thumbs/3.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
                   <div class="content">
-                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
+                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
                   </div>
                 </header>
                 <footer class="cf">
                   <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eluniversal</span></a></div>
+                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                </footer>
+              </li>
+              <li class="element tweet">
+                <header class="cf">
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
+                  <div class="content">
+                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
+                  </div>
+                </header>
+                <footer class="cf">
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eluniversal</span></a></div>
+                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                </footer>
+              </li>
+              <li class="element tweet">
+                <header class="cf">
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/5.jpg"/></a></div>
+                  <div class="content">
+                    <p>Universidades, respuesta a necesidades regionales</p>
+                  </div>
+                </header>
+                <footer class="cf">
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
                   <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
               </li>
